--- a/bower.json
+++ b/bower.json
@@ -1,4 +1,7 @@
 {
   "name": "ember-cli-bootstrap-modal-dialog",
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "font-awesome": "fontawesome#^4.7.0"
+  }
 }
